--- a/dev-util/mkinitramfs/files/mkinitramfs.conf
+++ b/dev-util/mkinitramfs/files/mkinitramfs.conf
@@ -7,6 +7,9 @@
 # (this file will be sourced by mkinitramfs)
 #
 # Optionally auto-rotate initramfs images (Default = $FALSE)
-#ROTATE=$FALSE
+ROTATE=$FALSE
 #ROTATE=$TRUE
 
+# Set verbosity - for (1, 2): information or (3): debugging
+VERBOSE=$TRUE
+verbosity=2
