--- a/dev-util/mkinitramfs/files/init.conf
+++ b/dev-util/mkinitramfs/files/init.conf
@@ -29,10 +29,10 @@
 # 1234-3272 \
 # EFCB-CBA3"
 init_passdevice_list=" \
+KEY \
 5a01f645-afc8-43d2-8942-1ede622fb153 \
 1E6B-BAAA \
 E902-A074 \
-KEY \
 407A-3072 \
 CARD \
 13a02901-88cc-464f-8ea4-17d612155409 \
@@ -45,8 +45,8 @@ E81C-D549"
 
 # The init_passdevice's mount point and filesystem must also be specified here 
 init_passdevice_mount_point="/mnt/thumb"
-#init_passdevice_fs="vfat"
-init_passdevice_fs="ext4"
+init_passdevice_fs="vfat"
+#init_passdevice_fs="ext4"
 
 # Enable debugging output - like increased verbosity
 #init_DEBUG="true"
