--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,1 +1,7 @@
 masters = gentoo
+thin-manifests = true
+sign-manifests = false
+
+# Needed for profiles parent with repo syntax
+profile-formats = portage-2
+
